# AlacrityML

./: .gitignore  CMakeLists.txt  README.md  VERSION
example/: nn_model.cpp
include/Alacrity/: __alc.hpp  arrmath.hpp  extalgo.hpp  linalg.hpp  math.hpp  ml.hpp  random.hpp  stdalgo.hpp
src/: __alc.cpp  stdalgo.cpp
unit_tests/: Makefile  extalgo.cpp  linalgo.cpp  math.cpp  random.cpp  setup.cpp  stdalgo.cpp  unittest.hpp
